# CMake-Vcpkg-Example

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
src/: main.cpp
